--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>RGB Color Game</title>
-	<link rel="stylesheet" type="text/css" href="rgb.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>
@@ -30,6 +30,6 @@
 </div>
 
 
-<script type="text/javascript" src="rgb.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
